--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -16,6 +19,72 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  grid-template-areas: 'result details';
+  column-gap: 30px;
+  align-items: end;
+}
+
+.result {
+  grid-area: result;
+  place-items: end;
+}
+
+.result__video-container {
+  width: 100%;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.search-form {
+  display: flex;
+  gap: 40px;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.content__details {
+  grid-area: details;
+  max-height: 534px;
+}
+
+.content__list-container {
+  max-height: 298px;
+  overflow-y: auto;
+  /*overflow-x: hidden;*/
+}
+
+.content__list {
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: fill;
+  object-position: center;
+}
+
+.title {
+  margin-bottom: 26px;
 }
 
 h1,
