--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,25 @@ html {
   block-size: 100%;
 }
 
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+blockquote,
+fieldset {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
 .page {
   display: flex;
   justify-content: center;
@@ -43,6 +62,7 @@ html {
   width: 100%;
   height: 100%;
   object-fit: fill;
+  object-position: center;
 }
 
 .search-form {
@@ -56,7 +76,7 @@ html {
 }
 
 .search-form__fieldset-title {
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
@@ -68,7 +88,7 @@ html {
   display: flex;
   align-items: center;
   width: fit-content;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
@@ -82,7 +102,7 @@ html {
 
 .search-form__textfield {
   height: 22px;
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
@@ -154,7 +174,7 @@ html {
 }
 
 .button {
-  font-family: Fira Sans Condensed;
+  font-family: Fira Sans Condensed, Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 100%;
@@ -162,6 +182,7 @@ html {
   color: #fff;
   background-color: transparent;
   border: 1px solid #fff;
+  height: 34px;
 }
 
 .button:hover {
@@ -185,12 +206,10 @@ html {
 .search-form__submit-button {
   align-self: end;
   width: 194px;
-  height: 34px;
 }
 
 .more-button {
   width: 390px;
-  height: 33px;
   margin-left: 2px;
   margin-bottom: 2px;
 }
@@ -210,19 +229,18 @@ html {
   display: flex;
   gap: 26px;
   flex-direction: column;
-  max-height: 534px;
 }
 
 .content__list-container {
   position: relative;
-  max-height: 298px;
+  height: 298px;
   overflow-y: auto;
 }
 
 .content__list {
   display: flex;
   max-width: 390px;
-  gap: 27px;
+  gap: 28px;
   flex-direction: column;
   margin-bottom: 30px;
 }
@@ -230,25 +248,6 @@ html {
 .content__list-item {
   display: block;
   padding: 3px 3px;
-}
-
-.content__list-item:hover {
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-.content__list-item:focus {
-  outline: none;
-}
-
-.content__list-item:focus-visible {
-  outline: 1px solid #fff;
-  outline-offset: 1px;
-}
-
-.content__list-item:active {
-  background-color: #545050;
-  text-decoration: none;
 }
 
 .content__card-link_current {
@@ -266,6 +265,11 @@ html {
   color: #fff;
 }
 
+.content__card-link:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .content__card-link:focus {
   outline: none;
 }
@@ -273,6 +277,11 @@ html {
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
+.content__card-link:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
 
 .content__video-card {
   display: flex;
@@ -281,7 +290,7 @@ html {
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: Oswald, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
@@ -318,31 +327,12 @@ html {
 }
 
 .title {
-  font-family: Oswald;
+  font-family: Oswald, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
   letter-spacing: 0;
   text-transform: uppercase;
-}
-
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-blockquote,
-fieldset {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-ol {
-  list-style: none;
 }
 
 /* Кастомный скроллбар */
